# quran-quest

./: .gitignore  README.md  docker-compose.yml  start-backend.sh  start-mobile.sh
backend/: .env  .env.example  Dockerfile  pyproject.toml  quran_quest.db  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  gamification.py  quran.py  recitation.py  social.py  users.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  gamification.py  recitation.py  social.py  user.py
backend/app/schemas/: __init__.py  common.py  recitation.py  user.py
backend/app/services/: __init__.py  recitation_service.py
mobile/: .env.example  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
mobile/.expo/types/: router.d.ts
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  practice.tsx  profile.tsx  social.tsx
mobile/app/alphabet/: [lessonId].tsx  _layout.tsx  index.tsx
mobile/app/learn/: [surahId].tsx  _layout.tsx  index.tsx
mobile/app/onboarding/: _layout.tsx  index.tsx
mobile/components/ui/: ArabicText.tsx  AyahLearningCard.tsx  Button.tsx  Celebration.tsx  CircularProgress.tsx  DuoButton.tsx  GlowCard.tsx  HeartDisplay.tsx  ProgressBar.tsx  ReadingLevelBadge.tsx  StatCounter.tsx  StreakBadge.tsx  WeeklyStreakCalendar.tsx  index.ts  (+1 more)
mobile/data/: arabic-alphabet.ts
mobile/hooks/: useRecording.ts
mobile/services/: api.ts  qul.ts  recitation.ts
mobile/stores/: auth.store.ts  learning.store.ts  lesson.store.ts
mobile/theme/: index.ts
mobile/types/: index.ts
mobile/utils/: haptics.ts
onboarding/: CalculateView.swift  FinalCalculateView.swift  GoalView.swift  OnboardingView.swift  ReferallViewScreen.swift  ReviewScreenView.swift  WhyView.swift
(+13 files in other folders)
